@@ -4,6 +4,8 @@ v1.11.8:
  - Deprecated: the following config options are deprecated:
      - emit_duration in statsd config, use emit_interval instead
      - untrusted_read_limit in server config, use untrusted_read_speed_limit instead
+     - tcp_conn_speed_limit/tcp_conn_limit in user config, use tcp_sock_speed_limit instead
+     - udp_relay_speed_limit/udp_relay_limit in user config, use udp_sock_speed_limit instead
 
 v1.11.7:
  - BUG FIX: fix read of H2 zero size body frame
